fix(charity-redesign): smaller font on small devices

--- a/src/Dothiv/CharityWebsiteBundle/Resources/public/lesscss/index/modules/countingsites.less
+++ b/src/Dothiv/CharityWebsiteBundle/Resources/public/lesscss/index/modules/countingsites.less
@@ -9,6 +9,9 @@ article.countingsites {
     text-align: center;
     color: @hivpink;
     line-height: 2 * @font-size-h1;
+    &.long {
+      font-size: @font-size-base;
+    }
     @media (min-width: @screen-sm-min) {
       font-size: @font-size-h1 * 1.5;
       &.long {
